footer fixes alignment

--- a/site/web/app/themes/nos/resources/assets/styles/layouts/_footer.scss
+++ b/site/web/app/themes/nos/resources/assets/styles/layouts/_footer.scss
@@ -3,6 +3,10 @@ footer.content-info {
     @include font-light;
 
     nav {
+      &:first-child ul {
+        padding: 0;
+      }
+
       padding: 1em 1em 1em 0;
 
       @include media(">phone", "<tablet") {
@@ -29,7 +33,8 @@ footer.content-info {
 
   .footer-down {
     .nav-secondary ul li {
-      /* background-color: green; */
+      @include font-light;
+
       margin-right: 3em;
     }
 
